--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 	├── <a href="./users_Belarus_2021_06_15-22_20_12.csv">users_Belarus_2021_06_15-22_20_12.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_16-22_19_56.csv">users_Belarus_2021_06_16-22_19_56.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_17-22_20_21.csv">users_Belarus_2021_06_17-22_20_21.csv</a><br>
+	├── <a href="./users_Belarus_2021_06_18-22_19_48.csv">users_Belarus_2021_06_18-22_19_48.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-11_13_31.csv">users_Ukraine_2021_02_08-11_13_31.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-22_18_07.csv">users_Ukraine_2021_02_08-22_18_07.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_09-22_21_30.csv">users_Ukraine_2021_02_09-22_21_30.csv</a><br>
@@ -293,6 +294,7 @@
 	├── <a href="./users_Ukraine_2021_06_15-22_20_11.csv">users_Ukraine_2021_06_15-22_20_11.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_16-22_19_55.csv">users_Ukraine_2021_06_16-22_19_55.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_17-22_20_20.csv">users_Ukraine_2021_06_17-22_20_20.csv</a><br>
+	├── <a href="./users_Ukraine_2021_06_18-22_19_47.csv">users_Ukraine_2021_06_18-22_19_47.csv</a><br>
 	├── <a href="./users_World_2021_02_08-11_13_29.csv">users_World_2021_02_08-11_13_29.csv</a><br>
 	├── <a href="./users_World_2021_02_08-22_18_05.csv">users_World_2021_02_08-22_18_05.csv</a><br>
 	├── <a href="./users_World_2021_02_09-22_21_27.csv">users_World_2021_02_09-22_21_27.csv</a><br>
@@ -423,12 +425,13 @@
 	├── <a href="./users_World_2021_06_14-22_21_00.csv">users_World_2021_06_14-22_21_00.csv</a><br>
 	├── <a href="./users_World_2021_06_15-22_20_08.csv">users_World_2021_06_15-22_20_08.csv</a><br>
 	├── <a href="./users_World_2021_06_16-22_19_52.csv">users_World_2021_06_16-22_19_52.csv</a><br>
-	└── <a href="./users_World_2021_06_17-22_20_18.csv">users_World_2021_06_17-22_20_18.csv</a><br>
+	├── <a href="./users_World_2021_06_17-22_20_18.csv">users_World_2021_06_17-22_20_18.csv</a><br>
+	└── <a href="./users_World_2021_06_18-22_19_44.csv">users_World_2021_06_18-22_19_44.csv</a><br>
 	<br><br>
 	</p>
 	<p>
 
-2 directories, 393 files
+2 directories, 396 files
 	<br><br>
 	</p>
 	<hr>
